# ACRONYM

./: README.md  pyproject.toml  requirements.txt
acronym/: __init__.py  cli.py  detector.py  features.py  model.py  patterns.py  reader.py  trainer.py
data/en/: samples.json
data/it/: samples.json
models/: model_en.pkl  model_it.pkl
tests/: test_context_detection.py  test_detector.py  test_features.py  test_model.py  test_patterns.py  test_trainer.py  test_warm_start.py
